--- a/index.html
+++ b/index.html
@@ -59,20 +59,20 @@
                         <p class="dark-03 margin-b center-tex">
                             I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and<br> slick websites that provide real value to the end user. Thousands of clients have procured<br> exceptional resulfs while working with me. Delivering work within time and budget which meets<br> clients requirements in our mata.
                         </p>
-                        <div class="about-me center-tex">
-                            <div class="about-link">
+                        <div class="about-me center-text">
+                            <div>
                                 <h4 class="dark-03">Name:</h4>
                                 <p class="dark-02">Marry Hardy</p>
                             </div>
-                            <div class="about-link">
+                            <div>
                                 <h4 class="dark-03">Email:</h4>
                                 <p class="dark-02">info@gmail.com</p>
                             </div>
-                            <div class="about-link">
+                            <div>
                                 <h class="dark-03">Date of birth:</h>
                                 <p class="dark-02">11 November 1987</p>
                             </div>
-                            <div class="about-link">
+                            <div>
                                 <h4 class="dark-03">From</h4>
                                 <p class="dark-02">Los Angeles, USA</p>
                             </div>
@@ -83,10 +83,114 @@
              </div>
 
         </section>
+
+
+        <!-- what i do section -->
+
+        <section>
+            <div class="skil-description">
+                <h2 class="center-text">What I do</h2>
+                <p class="center-text skill-p-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            </div>
+
+            <div class="skil">
+             <div class="my-skill">
+                <img class="skill-icon" src="./images/icons/js.png" alt="">
+                <h3 class="skill-title dark-01">Vanilla JavaScript</h3>
+                <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+             </div>
+             <div class="my-skill">
+                <img src="./images/icons/react.png" alt="">
+                <h3 class="dark-01 skill-title">React</h3>
+                <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+             </div>
+             <div class="my-skill">
+                <img src="./images/icons/nodejs.png" alt="">
+                <h3 class="dark-01 skill-title">Node.js</h3>
+                <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+             </div>
+             <div class="my-skill">
+                <img src="./images/icons/mongo.png" alt="">
+                <h3 class="dark-01 skill-title">MongoDB</h3>
+                <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+             </div>   
+            </div>
+
+
+        </section>
+
+
+        <!-- start resume -->
+
+        <section class="resume-c">
+            <div class="resume-summary">
+                <h1>A summary of My Resume</h1>
+                <div class="sections">
+                    <div class="section">
+                        <h2>My Education</h2>
+                        <div class="card">
+                            <h3>Master in Computer Engineering</h3>
+                            <p>Harvard University / 2015 - 2017</p>
+                            <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <div class="card">
+                            <h3>Master in Computer Engineering</h3>
+                            <p>Harvard University / 2015 - 2017</p>
+                            <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <div class="card">
+                            <h3>Master in Computer Engineering</h3>
+                            <p>Harvard University / 2015 - 2017</p>
+                            <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                    </div>
+                    <div class="section">
+                        <h2>My Experience</h2>
+                        <div class="card">
+                            <h3>Sr. Font End Developer</h3>
+                            <p>Apple Inc / 2020 - Current</p>
+                            <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <div class="card">
+                            <h3>Jr. Font End Developer</h3>
+                            <p>Dribbble Inc / 2018 - 2022</p>
+                            <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <div class="card">
+                            <h3>HTML Developer</h3>
+                            <p>Adobe Inc / 2017 - 2018</p>
+                            <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="download-button">
+                    <button>Download CV</button>
+                </div>
+            </div>
+        </section>
         
     </body>
     <footer>
-
+        <div class="contact-section">
+            <div class="contact-info">
+                <h2>Lets Connect</h2>
+                <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8:00 P.M ET, Monday through Friday.</p>
+                <div class="social-media">
+                    <a href="#"><img src="./images/icons/facebook.png" alt="Facebook"></a>
+                    <a href="#"><img src="./images/icons/twitter.png" alt="Twitter"></a>
+                    <a href="#"><img src="./images/icons/insta.png" alt="Instagram"></a>
+                </div>
+            </div>
+            <div class="contact-form">
+                <h2>Let's Message me</h2>
+                <form action="#" method="post">
+                    <input type="text" name="name" placeholder="Your name" required>
+                    <input type="email" name="email" placeholder="Your email" required>
+                    <textarea name="message" placeholder="Message" required></textarea>
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
