--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <h2>Lets Connect</h2>
                 <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8:00 P.M ET, Monday through Friday.</p>
                 <div class="social-media">
-                    <a href="#"><img src="./images/icons/facebook.png" alt="Facebook"></a>
+                    <a href="https://www.facebook.com/profile.php?id=100015844208078"><img src="./images/icons/facebook.png" alt="Facebook"></a>
                     <a href="#"><img src="./images/icons/twitter.png" alt="Twitter"></a>
                     <a href="#"><img src="./images/icons/insta.png" alt="Instagram"></a>
                 </div>
